# pars_with_bd

build-pars-unknown-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  pars
build-pars-unknown-Debug/pars_autogen/: moc_predefs.h
pars/: CMakeLists.txt  bolievpage.html  main.cpp
pars/home/sawert/qtprojects/pars/lalal/: CMakeCache.txt  Makefile  cmake_install.cmake
pars/lalal/: CMakeCache.txt
